Fix layout of mutually exclusive when its wrapped in a question component

--- a/src/components/field/_field.scss
+++ b/src/components/field/_field.scss
@@ -25,8 +25,7 @@
     position: relative;
   }
 
-  & > &,
-  &__items > & {
+  *:not(.field__group) > & {
     &__item {
       margin: 0 0 0.5rem;
       width: 100%;
